<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/tugas"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@android:color/background_light">

    <TextView
        android:id="@+id/hallo_boerd"
        android:layout_width="126dp"
        android:layout_height="15dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="58dp"
        android:layout_marginTop="4dp"
        android:gravity="top"
        android:text="@string/hallo_boerd"
        android:textAppearance="@style/hallo_boerd"/>
    <TextView
        android:id="@+id/apa_yang_in"
        android:layout_width="218dp"
        android:layout_height="45dp"
        android:layout_alignParentStart="true"
        android:layout_marginStart="23dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="26dp"
        android:text="@string/apa_yang_ingin_kamu_minum_hari_ini_agar_tidak_gerah"
        android:textAppearance="@style/apa_yang_in"
        android:lineSpacingExtra="-2sp"
        android:gravity="top"/>

    <TextView
        android:id="@+id/terdekat"
        android:layout_width="218dp"
        android:layout_height="39dp"
        android:layout_alignParentStart="true"
        android:layout_marginStart="25dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="196dp"
        android:text="@string/terdekat_dengan_kamu"
        android:textAppearance="@style/terdekat"
        android:lineSpacingExtra="-2sp"
        android:gravity="top"
        />


    <View
        android:id="@+id/rectangle_1"
        android:layout_width="38dp"
        android:layout_height="33dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="329dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/profil" />

    <View
        android:id="@+id/pencarian"
        android:layout_width="288dp"
        android:layout_height="26dp"
        android:layout_alignParentStart="true"
        android:layout_marginStart="24dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="70dp"
        android:background="@drawable/pencarian"
        />

    <TextView
        android:id="@+id/lasegar_air"
        android:layout_width="150dp"
        android:layout_height="25dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="70dp"
        android:layout_marginTop="70dp"
        android:gravity="top"
        android:text="@string/lasegar_air"
        android:textAppearance="@style/lasegar_air"
        android:textColor="#757575" />

    <View
        android:id="@+id/group_36633"
        android:layout_width="18dp"
        android:layout_height="16dp"
        android:layout_alignParentStart="true"
        android:layout_marginStart="33dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="75dp"
        android:background="@drawable/group"
        />

    <RelativeLayout
        android:id="@+id/minuman"
        android:layout_width="81dp"
        android:layout_height="70dp"
        android:layout_alignParentStart="true"
        android:layout_marginStart="27dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="107dp"
        android:background="@drawable/minuman"
        >

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/LARUTAN"
        android:layout_width="81dp"
        android:layout_height="66dp"
        android:layout_alignParentStart="true"
        android:layout_marginStart="116dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="109dp"
        android:background="@drawable/larut"
        />

    <RelativeLayout
        android:id="@+id/MIZONE"
        android:layout_width="82dp"
        android:layout_height="69dp"
        android:layout_alignParentStart="true"
        android:layout_marginStart="197dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="107dp"
        android:background="@drawable/mizone"
        />

    <RelativeLayout
        android:id="@+id/tehbotol"
        android:layout_width="wrap_content"
        android:layout_height="63dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="282dp"
        android:layout_marginTop="107dp"
        android:background="@drawable/tehbotol" />

    <View
        android:id="@+id/tampilan"
        android:layout_width="344dp"
        android:layout_height="174dp"
        android:layout_alignParentStart="true"
        android:layout_marginStart="19dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="218dp"
        android:background="@drawable/tampilan"
        />

    <View
        android:id="@+id/warung"
        android:layout_width="179dp"
        android:layout_height="151dp"
        android:layout_alignParentStart="true"
        android:layout_marginStart="33dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="216dp"
        android:background="@drawable/warung"
        />

    <View
        android:id="@+id/garis"
        android:layout_width="344dp"
        android:layout_height="28dp"
        android:layout_alignParentStart="true"
        android:layout_marginStart="19dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="384dp"
        android:background="@drawable/garis"
        />

    <TextView
        android:id="@+id/km"
        android:layout_width="71dp"
        android:layout_height="13dp"
        android:layout_alignParentStart="true"
        android:layout_marginStart="70dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="390dp"
        android:text="@string/km"
        android:textAppearance="@style/km"
        android:lineSpacingExtra="-1sp"
        android:gravity="top"
        />


    <View
        android:id="@+id/toko"
        android:layout_width="144dp"
        android:layout_height="139dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="215dp"
        android:layout_marginTop="227dp"
        android:background="@drawable/toko" />

    <TextView
        android:id="@+id/tempat"
        android:layout_width="218dp"
        android:layout_height="39dp"
        android:layout_alignParentStart="true"
        android:layout_marginStart="59dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="372dp"
        android:text="@string/warung_dua"
        android:textAppearance="@style/warung_dua"
        android:lineSpacingExtra="-1sp"
        android:gravity="top"
        />


    <RelativeLayout
        android:id="@+id/warung_dua"
        android:layout_width="147dp"
        android:layout_height="41dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="50dp"
        android:layout_marginTop="372dp"
        android:gravity="top"
        android:lineSpacingExtra="-1sp"
        android:text="@string/warung_dua"
        android:textAppearance="@style/warung_dua">


        <View
            android:id="@+id/lokasi"
            android:layout_width="13dp"
            android:layout_height="13dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/lokasi" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/kedai"
        android:layout_width="144dp"
        android:layout_height="37dp"
        android:layout_marginStart="220dp"
        android:layout_marginTop="370dp"
        android:gravity="top"
        android:lineSpacingExtra="-1sp">

        <TextView
            android:id="@+id/toko_pintar"
            android:layout_width="131dp"
            android:layout_height="match_parent"
            android:layout_centerVertical="true"
            android:lineSpacingExtra="-1sp"
            android:text="@string/toko_pintar"
            android:textAppearance="@style/toko_pintar" />

        <TextView
            android:id="@+id/jarak"
            android:layout_width="101dp"
            android:layout_height="12dp"
            android:layout_alignParentStart="true"
            android:layout_marginStart="16dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="20dp"
            android:text="@string/jarak"
            android:textAppearance="@style/jarak"
            android:lineSpacingExtra="-1sp"
            android:gravity="top"
            />

        <View
            android:id="@+id/fill_1"
            android:layout_width="13dp"
            android:layout_height="13dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/tempat" />


    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/ruko"
        android:layout_width="285dp"
        android:layout_height="137dp"
        android:layout_alignParentStart="true"
        android:layout_marginStart="50dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="437dp"
        android:background="@drawable/ruko"
        >

    </RelativeLayout>
    <View
        android:id="@+id/balok"
        android:layout_width="285dp"
        android:layout_height="22dp"
        android:layout_alignParentStart="true"
        android:layout_marginStart="50dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="574dp"
        android:background="@drawable/balok"
        />

    <View
        android:id="@+id/iconly_brok"
        android:layout_width="17dp"
        android:layout_height="17dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="62dp"
        android:layout_marginTop="576dp"
        android:background="@drawable/maps" />


    <TextView
        android:id="@+id/ukurann"
        android:layout_width="52dp"
        android:layout_height="15dp"
        android:layout_alignParentStart="true"
        android:layout_marginStart="90dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="577dp"
        android:text="@string/ukurann"
        android:textAppearance="@style/ukurann"
        android:lineSpacingExtra="1sp"
        android:gravity="top"
        />

    <TextView
        android:id="@+id/kurniawan"
        android:layout_width="179dp"
        android:layout_height="16dp"
        android:layout_alignParentStart="true"
        android:layout_marginStart="140dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="577dp"
        android:text="@string/kurniawan"
        android:textAppearance="@style/kurniawan"
        android:lineSpacingExtra="-1sp"
        android:gravity="top"
        />


    <View
        android:id="@+id/batas"
        android:layout_width="339dp"
        android:layout_height="27dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="36dp"
        android:layout_marginTop="663dp"
        android:background="@drawable/batas" />

    <View
        android:id="@+id/home"
        android:layout_width="14dp"
        android:layout_height="16dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="67dp"
        android:layout_marginTop="660dp"
        android:layout_marginEnd="332dp"
        android:layout_marginBottom="45dp"
        android:background="@drawable/home" />

    <RelativeLayout
        android:id="@+id/buy"
        android:layout_width="16dp"
        android:layout_height="16dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="67dp"
        android:layout_marginTop="660dp"
        android:layout_marginEnd="290dp"
        android:layout_marginBottom="45dp"
        android:clipToOutline="true"
        android:background="@drawable/buy"
        />


</RelativeLayout>